# zhangguiwenshu

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml  setup_env.py
app/: __init__.py
app/agent/: __init__.py  context.py  graph.py  llm.py  state.py
app/agent/nodes/: __init__.py  add_extra_context.py  correct_sql.py  extract_keywords.py  filter_metric_info.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  recall_column.py  recall_metric.py  recall_value.py  run_sql.py  validate_sql.py
app/api/routers/: query_router.py
app/client/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py
app/conf/: app_config.py  meta_config.py
app/core/: app_startup.py  context.py  di.py  log.py  path_config.py  service_registry.py
app/entities/: __init__.py  column_info.py  column_metric.py  metric_info.py  table_info.py  value_info.py
app/models/: meta_column.py  meta_column_metric.py  meta_data.py  meta_metric.py  meta_table.py
app/prompt/: prompt_loader.py
app/repositories/es/: value_es_repository.py
app/repositories/mysql/dw/: dw_mysql_repository.py
app/repositories/qdrant/: column_qdrant_repository.py  metric_qdrant_repository.py
app/scripts/: bulid_meta_knowledge.py
app/service/: meta_knowledge_service.py  query_service.py
conf/: app_config.example.yaml  app_config.yaml  app_config_local.yaml  meta_config.yaml
docker/: docker-compose.yaml
docs/: API接口文档.md  从零搭建项目指南.md  开发者简历亮点.md  项目亮点与设计需求分析.md  项目架构文档.md
prompts/: generate_sql.prompt
(+5 files in other folders)
